Funciones suma, resta, multiplicación, division y volumen de una esfera agregadas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calculadora_POLIGAMES">
         <activity
+            android:name=".VolumenEsferaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".DivisionActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MultiplicacionActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RestaActivity"
+            android:exported="true" />
+        <activity
+            android:name=".SumaActivity"
+            android:exported="true" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
