--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Calculadora_POLIGAMES">
         <activity
+            android:name=".AreaTActivity"
+            android:exported="false" />
+        <activity
             android:name=".VolumenEsferaActivity"
             android:exported="true" />
         <activity
